--- a/CatNewsAPI/CatNewsAPI.csproj
+++ b/CatNewsAPI/CatNewsAPI.csproj
@@ -93,7 +93,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="CFDatabaseContext.cs" />
-    <Compile Include="Controllers\CatsController.cs" />
+    <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -101,8 +101,17 @@
     <Compile Include="Migrations\202307212006408_Init.designer.cs">
       <DependentUpon>202307212006408_Init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202307230609442_Init1.cs" />
+    <Compile Include="Migrations\202307230609442_Init1.designer.cs">
+      <DependentUpon>202307230609442_Init1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202307230622208_ChangeCat.cs" />
+    <Compile Include="Migrations\202307230622208_ChangeCat.designer.cs">
+      <DependentUpon>202307230622208_ChangeCat.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Cat.cs" />
+    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\News.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -120,6 +129,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202307212006408_Init.resx">
       <DependentUpon>202307212006408_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202307230609442_Init1.resx">
+      <DependentUpon>202307230609442_Init1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202307230622208_ChangeCat.resx">
+      <DependentUpon>202307230622208_ChangeCat.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
