Create basic categories controller with get api route

--- a/CatNewsAPI/CatNewsAPI.csproj
+++ b/CatNewsAPI/CatNewsAPI.csproj
@@ -93,6 +93,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="CFDatabaseContext.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
